--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "database/migrations"
         ],
         "psr-4": {
             "App\\": "app/"
