--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.2.1",
+        "bootstrap": "^4.3.1",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.14.7",
-        "vue": "^2.6.3"
+        "vue": "^2.6.9",
+        "vue-template-compiler": "^2.6.9"
     },
     "dependencies": {
-        "npm": "^6.7.0"
+        "node-sass": "^4.11.0",
+        "npm": "^6.9.0"
     }
 }
