--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-debugbar": "v3.2.0",
         "barryvdh/laravel-ide-helper": "^2.5",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
         "inani/larapoll": "^2.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
