--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,12 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "barryvdh/laravel-debugbar": "v3.2.0",
+        "barryvdh/laravel-debugbar": "^3.2",
         "barryvdh/laravel-ide-helper": "^2.5",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "inani/larapoll": "^2.0",
-        "laravel/framework": "5.7.*",
+        "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
         "nunomaduro/laravel-console-menu": "^2.0",
