--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
         "axios": "^0.18",
         "bootstrap": "^4.3.1",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^2.0",
+        "jquery": ">=3.4.0",
+        "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
-        "popper.js": "^1.14.7",
-        "vue": "^2.6.9",
-        "vue-template-compiler": "^2.6.9"
+        "popper.js": "^1.15.0",
+        "resolve-url-loader": "^2.3.2",
+        "sass": "^1.15.2",
+        "sass-loader": "^7.1.0",
+        "vue": "^2.6.10",
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "node-sass": "^4.11.0",
+        "node-sass": "^4.12.0",
         "npm": "^6.9.0"
     }
 }
