--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
+        "maatwebsite/excel": "3.2.x-dev",
         "nunomaduro/laravel-console-menu": "^2.0",
         "reliese/laravel": "^0.0.13"
     },
