--- a/composer.json
+++ b/composer.json
@@ -5,26 +5,27 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.1.3|^8.0",
+        "ext-intl": "*",
         "barryvdh/laravel-debugbar": "^3.2",
         "barryvdh/laravel-ide-helper": "^2.5",
         "fideloper/proxy": "^4.0",
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "^7.0.1",
         "inani/larapoll": "^2.0",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.4.0",
-        "nunomaduro/laravel-console-menu": "^2.0",
-        "reliese/laravel": "^0.0.13",
-      "ext-intl": "*"
+        "laravel/framework": "^7.0",
+        "laravel/helpers": "^1.4",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.0",
+        "laravelcollective/html": "6.*",
+        "reliese/laravel": "^v0.0.19"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
+        "beyondcode/laravel-dump-server": "^1.7",
         "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
+        "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "nunomaduro/collision": "^v5.2.0",
+        "phpunit/phpunit": "^9.3"
     },
     "autoload": {
         "classmap": [
