--- a/composer.json
+++ b/composer.json
@@ -5,17 +5,18 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.1.3|^8.0",
+        "php": "^7.3|^8.0",
         "ext-intl": "*",
         "barryvdh/laravel-debugbar": "^3.2",
         "barryvdh/laravel-ide-helper": "^2.5",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "inani/larapoll": "^2.0",
-        "laravel/framework": "^7.0",
+        "laravel/framework": "^8.0",
         "laravel/helpers": "^1.4",
+        "laravel/legacy-factories": "^1.1",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
+        "laravel/ui": "^3.2",
         "laravelcollective/html": "6.*",
         "reliese/laravel": "^v0.0.19"
     },
