--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "inani/larapoll": "^2.0",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^v8.40.0",
         "laravel/helpers": "^1.4",
         "laravel/legacy-factories": "^1.1",
         "laravel/tinker": "^2.0",
