--- a/package.json
+++ b/package.json
@@ -2,29 +2,22 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "mix --production"
     },
     "devDependencies": {
         "axios": "^0.21.1",
-        "bootstrap": "^4.3.1",
-        "cross-env": "^5.1",
-        "jquery": ">=3.5.0",
         "laravel-mix": "^6.0.18",
         "lodash": "^4.17.19",
         "popper.js": "^1.15",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.22.4",
-        "sass-loader": "^7.1.0",
-        "vue": "^2.6.10",
-        "vue-template-compiler": "^2.6.10"
+        "postcss": "^8.1.14"
     },
     "dependencies": {
-        "node-sass": "^4.14.1",
-        "npm": "^6.14.8"
+        "node-sass": "^6.0.1",
+        "npm": "^7.20.6"
     }
 }
