--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.2",
         "laravelcollective/html": "6.*",
+        "league/csv": "^9.7",
         "reliese/laravel": "^v0.0.19"
     },
     "require-dev": {
